# Reed-Solomon-Decoder-and-Encoder

./: CMakeLists.txt  README.md  main.cpp
encoding/: coder.cpp  coder.h  decoder.cpp  decoder.h
field_element/: consts.h  element.cpp  element.h  polynome.cpp  polynome.h
utility/: fourier1023.cpp  fourier1023.h  fourier33.cpp  fourier33.h  utility functions.h  utility_functions.cpp
